chore: Remove unused image files from frontend/uploads directory

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs
+/frontend/uploads/fia_avatar.jpeg
+/frontend/uploads/IMG_0887.jpg
+/frontend/uploads/IMG_0903.jpg
